# cpp-inventory-manager

./: .env.example  CMakeLists.txt  README.md  migration.sql
src/: main.cpp
src/controllers/: category_controller.cpp  category_controller.h  product_controller.cpp  product_controller.h
src/gui/: MainWindow.cpp  MainWindow.h
src/gui/components/: EditProductDialog.cpp  EditProductDialog.h
src/gui/pages/: HomePage.cpp  HomePage.h  ProductsPage.cpp  ProductsPage.h
src/models/: category.cpp  category.h  db_connection.cpp  db_connection.h  product.cpp  product.h  supplier.cpp  supplier.h
